# TNM095_SafariAI

./: .gitignore  README.md  index.data  index.html.mem  index.js
include/: main_js.cpp  main_native.cpp
include/CBR/: CBR.cpp  CBR.h  Case.h  WorldState.h
include/core/: Camera.cpp  Camera.h  Globals.h  ObjectHandler.cpp  ObjectHandler.h  RandomGenerator.cpp  RandomGenerator.h  Renderer.cpp  Renderer.h  Resources.cpp  Resources.h  Texture.cpp  Texture.h  Utilities.cpp  Utilities.h
include/world/: Animal.cpp  Animal.h  Carnivore.cpp  Carnivore.h  Grass.cpp  Grass.h  Herbivore.cpp  Herbivore.h  Object.cpp  Object.h
js/: Makefile  index.data  index.html.mem  index.js
native/: .fuse_hidden0000068800000006  CMakeCache.txt  CMakeLists.txt  Makefile  SDL_test  SafariAI  WildlifeSimulator  cmake_install.cmake
